sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var swapped= false;-
    do {
      for (i<- 0 to getValueCount()-2) {
        if (isSmaller(i+1,i)){
          swap(i,i+1);
          swapped = true ;
        }
      }
      for(i <- getValueCount()-2 to 0 by -1) {
        if (isSmaller(i+1,i)) {
          swap(i,i+1);
          swapped=true;
        } 
      } while (swapped);
    }
}  